add assets file read

--- a/assets/HelloWorld.html
+++ b/assets/HelloWorld.html
@@ -50,13 +50,15 @@
 </head>
 <body>
 <article>
-    <section class="view">Hello world!</section>
+    <section class="view">Hello world! This is Webview</section>
 </article>
 
 <script>
     (function(){
-        Android.showToast("Hello android,this is from Javasript");
+//        Android.showToast("Hello android,this is from Javasript");
     })()
 </script>
+
+<script type="text/javascript" src="js/hello.js"></script>
 </body>
 </html>
