add assets file read

--- a/assets/HelloWorld.html
+++ b/assets/HelloWorld.html
@@ -55,7 +55,7 @@
 
 <script>
     (function(){
-//        Android.showToast("Hello android,this is from Javasript");
+        Android.showToast("Hello android,this is from Javasript");
     })()
 </script>
 
